components/modal.css
.modal-wrapper {
  z-index: 1;
  background-color: rgba(0, 0, 0, .5);
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
.modal-container {
  max-width: 30rem;
  height: auto;
  background-color: var(--primary-dark);
  color: var(--text-white);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

